# Glimps

./: .editorconfig  .gitignore  .glimpsrc.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GLIMPS-PLAN.md  README.md  ROADMAP.md  SECURITY.md  dist-workspace.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_release.yml  formatter_request.yml  good_first_formatter.yml
.github/good-first-issues/: 00-start-here.md  01-git-diff-name-only.md  02-diff-metadata.md  03-git-stash-list.md  04-ripgrep-grep.md  05-tree.md  06-docker-ps.md  07-kubectl-get-pods.md  08-cargo-summaries.md  09-more-languages.md  10-demo-evidence-checklist.md
.github/workflows/: ci.yml  release.yml
benches/: format.rs
demo/: README.md  glimps.tape
docs/: COMPATIBILITY.md  COMPETITIVE_PRODUCT_GAP_ANALYSIS.md  CONTRIBUTOR_OUTREACH_PLAN.md  FAILURE_INTELLIGENCE_PLAN.md  FORMATTER_DESIGN_GUIDE.md  FRESH_MAC_DOGFOOD.md  GOOD_FIRST_ISSUES.md  LAUNCH_HARDENING_CHECKLIST.md  PUBLIC_BETA_RELEASE_RUNBOOK.md  REPOSITORY_SETTINGS.md  SAFETY_INVARIANTS.md
proptest-regressions/format/: mod.txt  tests.txt
scripts/: dogfood-macos.sh  release-readiness.sh  render-demo.sh
scripts/gh/: README.md  create-issues.sh  setup-labels.sh
site/: .cta.json  eslint.config.js  index.html  package-lock.json  package.json
site/public/: _redirects  manifest.json  robots.txt  sitemap.xml
site/src/: main.tsx  routeTree.gen.ts  styles.css
site/src/components/: DocsLayout.tsx
site/src/components/ui/: glimps-mark.tsx  glimps.tsx  hero-video-dialog.tsx
site/src/lib/: seo.ts
site/src/routes/: __root.tsx  about.tsx  features.tsx  index.tsx  installation.tsx
src/: config.rs  doctor.rs  init.rs  lib.rs  main.rs  metadata.rs  pty.rs  terminal.rs
src/format/: cmdline.rs  command.rs  diff.rs  exitcode.rs  html.rs  http.rs  json.rs  linefmt.rs  mod.rs  osc133.rs  pin.rs  tests.rs  theme.rs
src/format/linefmt/: code.rs  command_views.rs  common.rs  diagnostics.rs  documents.rs  git.rs  json_lines.rs  network.rs  streaming.rs  tables.rs
tests/: pty_integration.rs
tests/corpus/commands/: ansi_256color.txt  ansi_control_only.txt  app_log.txt  base64.txt  binary_dump.txt  brew_list.txt  cargo_build.txt  cargo_test.txt  cargo_tree.txt  cr_progress.txt  curl_verbose.txt  date.txt  df.txt  docker_ps.txt  du.txt  emoji_cjk.txt  env.txt  find.txt  git_branch_color.txt  git_diff_color.txt  git_log.txt  git_log_graph.txt  git_status.txt  grep_color.txt  hexdump.txt  ifconfig.txt  journalctl.txt  jq_color.txt  kubectl_get.txt  ls.txt  ls_color.txt  lsof.txt  man_overstrike.txt  netstat.txt  npm_install.txt  ping.txt  ps.txt  source_code.txt  sqlite_table.txt  stacktrace_python.txt  (+8 more)
tests/corpus/html/: page.expected  page.html
tests/corpus/json/: array.expected  array.json  malformed.json  object.expected  object.json
