[package]
name = "glimps"
version = "0.0.1"
edition = "2021"
description = "Zero-config smart terminal output formatter — auto-detects and reformats JSON, HTML, and logs live in your shell."
license = "MIT"
repository = "https://github.com/glimps-sh/glimps"
readme = "README.md"
keywords = ["terminal", "pty", "formatter", "json", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "glimps"
path = "src/main.rs"

[dependencies]
# PTY supervision — the core of the whole tool. Lets us run the user's shell
# inside a pseudo-terminal so we can see (and reformat) all output, while
# interactive programs (vim/ssh/htop) still think they have a real terminal.
portable-pty = "0.8"

# Raw mode + terminal size on the controlling terminal.
crossterm = "0.28"

# SIGWINCH handling so the inner PTY resizes when the window does.
signal-hook = "0.3"

# Ergonomic error handling for the spike.
anyhow = "1"

# JSON parsing for the first formatter (detect-by-parse + pretty-print), exactly
# as called for in GLIMPS-PLAN §4. `preserve_order` keeps object keys in their
# original order so we never silently reorder the user's data — a trust
# requirement for a tool that reformats output.
serde_json = { version = "1", features = ["preserve_order"] }

# Local wall-clock for the command/output separator timestamp. `local-offset`
# lets us read the UTC offset once at startup (single-threaded, sound) and apply
# it to monotonic-free `now_utc()` — avoiding the unsoundness of `localtime` in a
# multithreaded process. Only the timestamp path uses it.
time = { version = "0.3", features = ["local-offset"] }

[dev-dependencies]
# Property-based testing. The charter mandates a property test proving every
# transform is panic-free and byte-safe on arbitrary input; proptest is the
# standard, well-known crate for that. Dev-only — never ships in the binary.
proptest = "1"

# Latency-budget benchmarks for detectors/formatters (GLIMPS-PLAN §4 / DoD).
criterion = "0.5"

[[bench]]
name = "format"
harness = false

[profile.release]
# Optimize for a small, fast single binary (distribution goal).
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
